--- a/index.html
+++ b/index.html
@@ -387,18 +387,18 @@
     </center>
     <h1>1.Adding Image on Website</h1>
     <h3>Nature park (Turkey)</h3>
-    <img src="nature pak.jpg" width="700" height="400">
+    <img src="./assets/nature-pak.jpg" width="700" height="400">
     <hr>
     <h1>2.Where to Place Image in your Code</h1>
     <h2>1.Before a Paragraph</h2>
     <h3>Vernazza sunset</h3>
-    <img src="vernazza.jpg" width="700" height="400">
+    <img src="./assets/vernazza.jpg" width="700" height="400">
     <p>The beauty of a sunset lies in its ever-changing nature. No two sunsets are exactly alike, and each one offers a
         unique and awe-inspiring display of colors and light. As the sun descends towards the horizon, the sky is
         transformed into a canvas of vibrant hues from fiery oranges and reds to soft pinks and purples.</p>
     <h2>Inside the start of Paragraph</h2>
     <h3>Rolls Royce</h3>
-    <p><img src="rols royce.jpg" width="700" height="400"> Rolls-Royce Holdings plc (company number 04706930)[3] is a
+    <p><img src="./assets/rols-royce.jpg" width="700" height="400"> Rolls-Royce Holdings plc (company number 04706930)[3] is a
         British multinational engineering company incorporated
         in February 2011 that owns Rolls-Royce, a business established in 1904 which today designs, manufactures and
         distributes power systems for aviation and other industries. Rolls-Royce is the world's second-largest maker of
@@ -411,7 +411,7 @@
     <h3>MAZAR-E-QUAID</h3>
     <p>Mazar-e-Quaid (Urdu: مزار قائد), also known as Jinnah Mausoleum Mazar-e-Quaid Jinnah Mausoleum or
         Mazare-Quaidthe National Mausoleum, is the final place of Quaid-e-Azam ("Great Leader")
-        Muhammad Ali Jinnah, the founderof pakistan design in a <img src="mazare quaid.jpg" width="700"
+        Muhammad Ali Jinnah, the founderof pakistan design in a <img src="./assets/mazare-quaid.jpg" width="700"
             height="400">1960s modernist style, it was completed in 1971, and is an
         iconic symbol of Karachi as well as one of the most popular tourist sites in the city.[1] The mausoleum complex
         also contains the tomb of Jinnah's sister, Māder-e Millat ("Mother of the Nation") Fatima Jinnah, as well as
@@ -421,7 +421,7 @@
     <h1>3.Alinging Images Horizontally</h1>
     <h2>1.Alinging Images Horizontally (left Attribute)</h2>
     <h3>ALLAMA MUHAMMAD IQBAL (R.A) </h3>
-    <p><img src="allama iqbal.jpeg" width="200" height="200" align="left" />
+    <p><img src="./assets/allama-iqbal.jpeg" width="200" height="200" align="left" />
         Sir Muhammad Iqbal (Urdu: محمد اقبال; 9 November 1877-21 April 1938) was a poet and politician from Punjab,
         British India (now in Pakistan), whose poetry in Urdu, Punjabi and Persian is considered to be among the
         greatest of the modern era,[1] and whose vision of an independent state for the Muslims of British India was to
@@ -450,7 +450,7 @@
         help to poor and needy women and arbitrated in neighbor's disputes.</p>
     <h2>2. Aligning Images Horizontally (Rigt Attribute)</h2>
     <h3>MUHAMMAD ALI JINAH (R.A)</h3>
-    <p><img src="Quaideazam.jpeg" width="200" height="200" align="Right" />
+    <p><img src="./assets/Quaide-azam.jpeg" width="200" height="200" align="Right" />
         Muhammad Ali Jinnah (born Mahomedali Jinnahbhai; 25 December 1876 – 11 September 1948) was a barrister,
         politician
         and the founder of Pakistan.[2] Jinnah served as the leader of the All-India Muslim League from 1913 until
@@ -482,7 +482,7 @@
     <h1>4.Aligning Image Vertically</h1>
     <h2>1.Aling Image Vertically (top Attribute)</h2>
     <h3>Lookheed Martin F-35</h3>
-    <P><img src="F35 AirCraft.jpg" width="700" height="400" align="top" />F-35 F35 The Lockheed Martin F-35
+    <P><img src="./assets/F35 AirCraft.jpg" width="700" height="400" align="top" />F-35 F35 The Lockheed Martin F-35
         Lightning II is an American family of single-seat, single-engine, all-weather stealth multirole combat aircraft
         that is intended to perform both air superiority and strike missions. It is also able to provide electronic
         warfare and intelligence, surveillance, and reconnaissance capabilities. Lockheed Martin is the prime F-35
@@ -491,7 +491,7 @@
         carrier-based F-35C (CV/CATOBAR).
     <h2>2. Align Images Vertically (Middle Attribute)</h2>
     <h3>Steve Jobs</h3>
-    <p><img src="Steve Jobs.jpg" width="400" height="400" align="middle" /> Steven Paul Jobs (/dʒɒbz/;
+    <p><img src="./assets/Steve-Jobs.jpg" width="400" height="400" align="middle" /> Steven Paul Jobs (/dʒɒbz/;
         February 24, 1955 October 5, 2011) was an American business magnate, industrial designer, investor, and media
         proprietor. He was the chairman, chief executive officer (CEO), and co-founder of Apple Inc., the chairman and
         majority shareholder of Pixar, a member of The Walt Disney Company's board of directors following its
@@ -502,7 +502,7 @@
         enlightenment and studying Zen Buddhism.</p>
     <h2>3.Align Images Vertically (Bottom Attribute)</h2>
     <h3>The Great Wall of China</h3>
-    <p><img src="Great-Wall-of-China.jpg" alt="Bird" width="700" height="400" align="bottom" />The Great Wall of China
+    <p><img src="./assets/Great-Wall-of-China.jpg" alt="Bird" width="700" height="400" align="bottom" />The Great Wall of China
         (traditional Chinese: 萬里長城; simplified Chinese: 万里长城; pinyin: Wànlǐ Chángchéng) is a series of fortifications
         that were built across the historical northern borders of ancient Chinese states and Imperial China as
         protection against various nomadic groups from the Eurasian Steppe. Several walls were built from as early as
@@ -515,26 +515,26 @@
     <h3>This is Bit Map Images and it Depends on Pixel It's Format Like This Jpeg, PNG, Gif</h3>
     <h1>1. Jpg or Jpeg Format</h1>
     <h3>The Sun Rising</h3>
-    <img src="The Sun rise.jpg" width="700" height="400">
+    <img src="./assets/The-Sun-rise.jpg" width="700" height="400">
     <h1>2. Png Formats</h1>
     <h2>1. Non Transparent Png Format</h2>
     <h3>The Lion</h3>
-    <img src="Loin.png" width="300" height="300">
+    <img src="./assets/Loin.png" width="300" height="300">
     <h1>2. Transparent Png Format</h1>
     <h3>Twitter Logo</h3>
-    <img src="Transparent Twitter Logo.png" width="300" height="300">
+    <img src="./assets/Transparent-Twitter-Logo.png" width="300" height="300">
     <h1>3. Gif Formats</h1>
     <h2>1. Non Transparent Gif Format</h2>
     <h3>Using Laptop</h3>
-    <img src="Using Laptop Gif.gif" width="300" height="300">
+    <img src="./assets/Using-Laptop-Gif.gif" width="300" height="300">
     <h1>2. Transparent Gif Format</h1>
     <h3>The Duck</h3>
-    <img src="Transparent Duck.gif" width="300" height="300">
+    <img src="./assets/Transparent-Duck.gif" width="300" height="300">
     <hr>
     <h1>6. Figure and Figure Caption</h1>
     <h3>Shah Faisal Masjid</h3>
     <figure>
-        <img src="Shah Faisal Masjid.jpg" width="500" height="300">
+        <img src="./assets/Shah-Faisal-Masjid.jpg" width="500" height="300">
         <figcaption>Drone Captured Beautiful View of Shah Faisal Masjid in Islamabad, Pakistan</figcaption>
     </figure>
     <hr>
@@ -798,7 +798,120 @@
 </center>
 <br>
 <hr><hr><hr>
+<center>
+    <h1 style="color: darkblue;">Chapter # 7<q><u>Form</u></q></h1>
+</center>
+<h1>1.Form Structure</h1>
+<center>
+    ?
+    <br>
+   <h1><u>Application Form</u></h1>
+</center>
+<form>
+    <fieldset>
+        <legend><h4>For Only user</h4></legend>
+   
+    <center>
+First Name:
+    <input type="text" name="First Name" size="15"
+    maxlength="30" />
+last Name:
+<input type="text" name="last name" size="15"
+maxlength="30" />
+<br><br>
+Father Name:
+<input type="text" name="Father name" size="15" maxlength="30"/> 
+<br><br>
+Password:
+    <input type="text" name="Password" size="15"
+    maxlength="30" />
+Confirm Password:
+<input type="text" name="Confirm Password" size="15"
+maxlength="30" />
+ <p>Comments:</p>
+ <textarea name="Comments" cols="30" rows="4">Type your Feedback...</textarea>
+        <br /><br>
+        Sex: <input type="radio" name="genre" value="Male"
+        checked="checked" /> Male
+        <input type="radio" name="genre" value="Female" />
+        Female
+        <input type="radio" name="genre" value="Other" />
+        Other
+        </p>
+    Date of birth: 
+    <input type="text" name="Date of Birth" size="15" maxlength="30" placeholder="mm/ dd/ yyyy">
+    <br><br>
+    religion: 
+    <input type="text" name="religion" size="15" maxlength="30">
+    <br><br>
+    Email: 
+    <input type="text" name="Email" size="15" maxlength="30">
+    <br><br>
+    Mobile Number: 
+    <input type="text" name="Mobile Number" size="15" maxlength="30">
+    <br><br>
+    Website: 
+    <input type="text" name="Website" size="15" maxlength="30">
+    <br><br>
+    City: 
+    <input type="text" name="city" size="15" maxlength="30">
+    <br><br>
+    Province: 
+    <input type="text" name="Province" size="15" maxlength="30">
+    <br><br>
+    Adrress:
+    <input type="text" name="address" size="60" maxlength="30" placeholder="street line">
+    <br><br>
+    <input type="text" name="address" size="60" maxlength="30" placeholder="street Line 2">
 
+        <br /><br>
+        Interest:
+        <input type="checkbox" name="Cricket"
+        value="Cricket" checked="checked" /> Cricket
+        <input type="checkbox" name="Football"
+        value="Football" /> Football
+        <input type="checkbox" name="Tenis"
+        value="Tenis" /> Tenis
+        <input type="checkbox" name="Running"
+        value="Running" checked="checked" /> Running
+        <input type="checkbox" name="Shooting"
+        value="Shooting" /> Shooting
+        <input type="checkbox" name="Snooker"
+        value="Snooker" /> Snooker
+        <br><br>
+        Country:
+        <select name="devices">
+        <option value="Pakistan">Pakistan</option>
+        <option value="India">India</option>
+        <option value="Australia">Australia</option>
+        <option value="Newz Zealand">New Zealand</option>
+        <option value="Bangladesh">Bangladesh</option>
+        <option value="South Africa">South Africa</option>
+        <option value="England">England</option>
+        <option value="America">America</option>
+        <option value="Canada">Canada</option>
+
+
+
+
+
+
+   </select>
+        <br><br>
+        <p>Upload Profile Picture:</p>
+    <input type="file" name="user-song" />
+    <br><br>
+    <input type="submit" value="Upload" />
+    <br><br>
+    <input type="submit" name="submit"
+    value="submit" />
+</fieldset>
+
+
+
+    </form>
+
+</center>
 
 
 
