--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
         }
     </style>
     <style>
-        .course {background-color: bisque;}
-        .paid {background-color: peru;}
+        .course {
+            background-color: bisque;
+        }
+
+        .paid {
+            background-color: peru;
+        }
     </style>
 
 </head>
@@ -1277,44 +1282,48 @@
         <br><br>
         <li><b>Artificail Inteligence</b></li>
         <ul>
-            <li class="course">The theory and development of computer systems able to perform tasks normally requiring human
+            <li class="course">The theory and development of computer systems able to perform tasks normally requiring
+                human
                 intelligence, such as visual perception, speech recognition, decision-making, and translation
                 between languages. the theory and development of computer systems able to perform tasks normally
                 requiring human intelligence, such as visual perception, speech recognition, decision-making, and
                 translation between languages.</li>
         </ul>
         <br><br>
-    
-            <li><b>Cloud Computing</b></li>
-            <ul>
-        <li class="paid">Cloud computing is the on-demand availability of computer system resources, especially data storage
-            (cloud storage) and computing power, without direct active management by the user.[1] The term is
-            generally used to describe data centers available to many users over the Internet.[2] Large clouds,
-            predominant today, often have functions distributed over multiple locations from central servers. If the
-            connection to the user is relatively close, it may be designated an edge server. Clouds may be limited
-            to a single organization (enterprise clouds[3][4]), or be available to multiple organizations (public
-            cloud). Cloud computing relies on sharing of resources to achieve coherence and economies of scale.
-        </li>
+
+        <li><b>Cloud Computing</b></li>
+        <ul>
+            <li class="paid">Cloud computing is the on-demand availability of computer system resources, especially data
+                storage
+                (cloud storage) and computing power, without direct active management by the user.[1] The term is
+                generally used to describe data centers available to many users over the Internet.[2] Large clouds,
+                predominant today, often have functions distributed over multiple locations from central servers. If the
+                connection to the user is relatively close, it may be designated an edge server. Clouds may be limited
+                to a single organization (enterprise clouds[3][4]), or be available to multiple organizations (public
+                cloud). Cloud computing relies on sharing of resources to achieve coherence and economies of scale.
+            </li>
         </ul>
         <br><br>
-            <li><b>Blockchain</b></li>
-            <ul>
-        <li class="course">A blockchain,[1][2][3] originally block chain,[4][5] is a growing list of records, called blocks, that
-            are linked using cryptography.[1][6] Each block contains a cryptographic hash of the previous block,[6]
-            a timestamp, and transaction data (generally represented as a Merkle tree). By design, a blockchain is
-            resistant to modification of its data. This is because once recorded, the data in any given block cannot
-            be altered retroactively without alteration of all subsequent blocks. For use as a distributed ledger, a
-            blockchain is typically managed by a peer-to-peer network collectively adhering to a protocol for
-            inter-node communication and validating new blocks. Although blockchain records are not unalterable,
-            blockchains may be considered secure by design and exemplify a distributed computing system with high
-            Byzantine fault tolerance. The blockchain has been described as "an open, distributed ledger that can
-            record transactions between two parties efficiently and in a verifiable and permanent way".
-        </li>
+        <li><b>Blockchain</b></li>
+        <ul>
+            <li class="course">A blockchain,[1][2][3] originally block chain,[4][5] is a growing list of records, called
+                blocks, that
+                are linked using cryptography.[1][6] Each block contains a cryptographic hash of the previous block,[6]
+                a timestamp, and transaction data (generally represented as a Merkle tree). By design, a blockchain is
+                resistant to modification of its data. This is because once recorded, the data in any given block cannot
+                be altered retroactively without alteration of all subsequent blocks. For use as a distributed ledger, a
+                blockchain is typically managed by a peer-to-peer network collectively adhering to a protocol for
+                inter-node communication and validating new blocks. Although blockchain records are not unalterable,
+                blockchains may be considered secure by design and exemplify a distributed computing system with high
+                Byzantine fault tolerance. The blockchain has been described as "an open, distributed ledger that can
+                record transactions between two parties efficiently and in a verifiable and permanent way".
+            </li>
         </ul>
         <br><br>
         <li><b>Internet of Things</b></li>
         <ul>
-            <li class="paid">The Internet of things (IoT) describes the network of physical objects—“things”—that are embedded with
+            <li class="paid">The Internet of things (IoT) describes the network of physical objects—“things”—that are
+                embedded with
                 sensors, software, and other technologies for the purpose of connecting and exchanging data with other
                 devices and systems over the Internet. The definition of the Internet of things has evolved due to the
                 convergence of multiple technologies, real-time analytics, machine learning, commodity sensors, and
@@ -1333,7 +1342,53 @@
         </ol>
         </ol>
         <hr>
-        <h1></h1>
+        <h1>4. Block & Inline Level Elements</h1>
+        <h2>1. Block Level Elements</h2>
+        <p>Those elements appear in new line we call it block level elements.</p>
+        <b>Example:</b>
+        <ol>
+            <li>&lt;h1&gt;Heading&lt;/h1&gt;</li>
+            <li>&lt;p&gt;Paragraph&lt;/p&gt;</li>
+            <li>&lt;ol&gt;Ordered List&lt;/ol&gt;</li>
+            <li>&lt;ul&gt;Unordered list&lt;/ul&gt;</li>
+            <li>&lt;li&gt;list Item&lt;/li&gt;</li>
+            <li>&lt;div&gt;Division&lt;/div&gt;</li>
+        </ol>
+            <h2>2. Inline Level Elements</h2>
+            <p>Those elements appear in same line we call it inline level elements.</p>
+            <b>Example</b>
+        <ol>
+            <li>&lt;a&gt;Anchor Tag&lt;/a&gt;</li>
+            <li>&lt;b&gt;Bold&lt;/b&gt;</li>
+            <li>&lt;em&gt;Emphasis&lt;/em&gt;</li>
+            <li>&lt;/img&gt;</li>
+            <li>&lt;span&gt;Span&lt;/span&gt;</li>
+            <li>&lt;/img&gt;</li> 
+        </ol>
+
+
+
+
+
+
+
+
+
+
+            <hr>
+            <h1>5. Grouping Text and Elements in a Block & Inline Level</h1>
+            <h2>1. Grouping Text and Elements in a Block Level</h2>
+
+
+
+
+
+
+
+
+
+ 
+
 
 
 
