add new Features

--- a/index.html
+++ b/index.html
@@ -1166,10 +1166,6 @@
                     <option value="Canada">Canada</option>
 
 
-
-
-
-
                 </select>
                 <br><br>
                 <p>Upload Profile Picture:</p>
@@ -1178,7 +1174,10 @@
                 <input type="submit" value="Upload" />
                 <br><br>
                 <input type="submit" name="submit" value="submit" />
+            </center>
         </fieldset>
+    </Form>
+        
         <br>
         <hr>
         <hr>
@@ -1354,75 +1353,87 @@
             <li>&lt;li&gt;list Item&lt;/li&gt;</li>
             <li>&lt;div&gt;Division&lt;/div&gt;</li>
         </ol>
-            <h2>2. Inline Level Elements</h2>
-            <p>Those elements appear in same line we call it inline level elements.</p>
-            <b>Example</b>
+        <h2>2. Inline Level Elements</h2>
+        <p>Those elements appear in same line we call it inline level elements.</p>
+        <b>Example</b>
         <ol>
             <li>&lt;a&gt;Anchor Tag&lt;/a&gt;</li>
             <li>&lt;b&gt;Bold&lt;/b&gt;</li>
             <li>&lt;em&gt;Emphasis&lt;/em&gt;</li>
             <li>&lt;/img&gt;</li>
             <li>&lt;span&gt;Span&lt;/span&gt;</li>
-            <li>&lt;/img&gt;</li> 
+            <li>&lt;/img&gt;</li>
         </ol>
+        <hr>
+        <h1>5. Grouping Text and Elements in a Block & Inline Level</h1>
+        <h2>1. Grouping Text and Elements in a Block Level</h2>
+        <h3>Div Element</h3>
+        <div style="background-color: cadetblue;"><b>Cloud Computing</b></div>
+        <div style="background-color: cadetblue;">
+            <p>Cloud computing is the on-demand availability of computer system resources, especially data storage
+                (cloud storage) and computing power, without direct active management by the user.[1] The term is
+                generally
+                used to describe data centers available to many users over the Internet.[2] Large clouds, predominant
+                today,
+                often have functions distributed over multiple locations from central servers. If the connection to the
+                user
+                is relatively close, it may be designated an edge server. Clouds may be limited to a single organization
+                (enterprise clouds[3][4]), or be available to multiple organizations (public cloud). Cloud computing
+                relies on sharing of resources to achieve coherence and economies of scale.</p>
+        </div>
+        <h1>2. Grouping Text and Elements in a Inline Level</h1>
+        <h3>2. Span Element</h3>
+        <span style="background-color: yellow;"><b>Cloud Computing</b></span>
+        <p>Cloud computing is the on-demand availability of computer system resources, especially data storage (cloud
+            storage) and computing power, without direct active management by the user.[1] The term is generally used to
+            describe <span style="background-color: blueviolet;"> data centers</span> available to many users over the
+            Internet.[2] Large clouds, predominant today, often
+            have functions distributed over multiple locations from central servers. If the connection to the user is
+            relatively close, it may be designated an <span style="background-color: lawngreen;">edge
+                server</span>.Clouds may be limited to a single organization
+            (enterprise clouds[3][4]), or be available to multiple organizations <span
+                style="background-color: orange;">(public cloud)</span>. Cloud computing relies
+            on sharing of resources to achieve coherence and economies of scale.
+        </p>
+        <hr>
+        <h1>6. Iframes or Inline Frames</h1>
+        <h2>1. Cut window of YouTube</h2>
+        <h3>Why Code? Short Film (Part 1 & 2)</h3>
+        <div>
+            <iframe width="640" height="390" src="https://www.youtube.com/embed/nKIu9yen5nc"
+                title="What Most Schools Don&#39;t Teach" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="640" height="390" src="https://www.youtube.com/embed/dU1xS07N-FA"
+                title="&quot;Code Stars&quot; - Short Film" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <h2>2. Cut Window of Google Map</h2>
+        <h3>Sub Continent Map:</h3>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14159906.420505691!2d58.3546319874604!3d29.950436907162743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38db52d2f8fd751f%3A0x46b7a1f7e614925c!2sPakistan!5e0!3m2!1sen!2s!4v1729939536035!5m2!1sen!2s"
+            width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <hr>
+        <h1>7. Escape Characters or Escape Code</h1>
+        <h3>Use of Escape Characters</h3>
+        <ol>
+            <li>I Have &#165;50 pound</li>
+            <li>UK Currency &#163; pound</li>
+            <li>Europe Currencyis &#8364; Euro</li>
+            <li>Copywrite &#169; 2021 Piaic All write reserved.</li>
+            <li>This is Emphasis Tag &lt;em&gt;Content &lt;/em&gt; </li>
+            <li>PIAIC&#174; is an Technology Related Organization</li>
+            <li>Fiza Beauti Cream 223190 &#8482;</li>
+        </ol>
+        <center>
+            <h1 style="color: darkolivegreen; font-size: 50px;"><q>The End</q></h1>
+            <b>Copywrite &#169;2023 Example Inc. All write reserved.</b>
+            <br><br>
+            <b>Pakistan</b>
+        </center>
 
-
-
-
-
-
-
-
-
-
-            <hr>
-            <h1>5. Grouping Text and Elements in a Block & Inline Level</h1>
-            <h2>1. Grouping Text and Elements in a Block Level</h2>
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-    </form>
-
-    </center>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
 
