add new features

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {background-color: rgb(205, 232, 241);}
+    </style>
+    <style>
         #ai {
             background-color: rgb(150, 145, 140);
         }
@@ -44,8 +47,6 @@
 
         <h1 style="color: darkolivegreen;"><q><u>HTML5 Practice in depth</u></q></h1>
         <h1 style="color: darkolivegreen;"><u><q>Assigment</u></q></h1>
-        <h1>?</h1>
-        <h1>?</h1>
 
 
         <h1 style="color: darkblue;">Chapter 1 # <q><u>Structure</u></q></h1>
@@ -394,8 +395,7 @@
     <hr>
     <h1>2.Linking other page within the same page</h1>
     <h1>1.Access Page (sibling)</h1>
-    ?
-    ?
+     
     <hr>
     <h1>2.Acess Page (child)</h1>
     ?
@@ -1112,11 +1112,12 @@
                 <p>Comments:</p>
                 <textarea name="Comments" cols="30" rows="4">Type your Feedback...</textarea>
                 <br /><br>
-                Sex: <input type="radio" name="genre" value="Male" checked="checked" /> Male
-                <input type="radio" name="genre" value="Female" />
-                Female
-                <input type="radio" name="genre" value="Other" />
-                Other
+                
+                <p></p>
+                Sex: 
+                <input type="radio" name="genre" value="Male" checked="checked" /> Male
+                <input type="radio" name="genre" value="Female" /> Female
+                <input type="radio" name="genre" value="Other" /> Other
                 </p>
                 Date of birth:
                 <input type="text" name="Date of Birth" size="15" maxlength="30" placeholder="mm/ dd/ yyyy">
@@ -1173,7 +1174,7 @@
                 <br><br>
                 <input type="submit" value="Upload" />
                 <br><br>
-                <input type="submit" name="submit" value="submit" />
+                <input type="image" src="./assets/Submit-Button.png" width="130">
             </center>
         </fieldset>
     </Form>
