add new features

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {background-color: rgb(205, 232, 241);}
+        body {background-color: rgb(213, 241, 252);}
     </style>
     <style>
         #ai {
@@ -40,10 +40,17 @@
 <body>
     <a href="#bottom"><span id="top"></span>Bottom</a>
     <center>
-        <h1><q><u>Welcome to my Website</u></q></h1>
-        <h2><u>AHAD WAKEEL</u></h2>
-        <h2><u>CNC STUDENT</u></h2>
-        <h2><u>BATCH 9 HYDERABAD</u></h2>
+    <h1>
+        <q><u>Welcome to my Website</u></q>
+    </h1>
+    <h2>
+        <u>AHAD WAKEEL</u>
+        <br>
+        <u>CNC STUDENT</u>
+        <br>
+        <u>BATCH 9 HYDERABAD</u>
+        <br>
+    </h2>
 
         <h1 style="color: darkolivegreen;"><q><u>HTML5 Practice in depth</u></q></h1>
         <h1 style="color: darkolivegreen;"><u><q>Assigment</u></q></h1>
