--- a/index.html
+++ b/index.html
@@ -402,19 +402,16 @@
     <hr>
     <h1>2.Linking other page within the same page</h1>
     <h1>1.Access Page (sibling)</h1>
-     
+     <a href="review.html">Reviews</a>
     <hr>
     <h1>2.Acess Page (child)</h1>
-    ?
-    ?
+     <a href="login-signup.html">login-Signup</a>
     <hr>
     <h1>3. Access Page (Grand child)</h1>
-    ?
-    ?
+     <a href="men.html">Men Clothing</a>
     <hr>
     <h1>4.Access Page (Grand Grand Child)</h1>
-    ?
-    ?
+     <a href="women.html">Women Clothing</a>
     <hr>
     <center>
         <h1 style="color: darkblue;">Chapter # 5 <q>Image</q></h1>
